[package]
name = "donuts"
version = "0.1.0"
authors = ["Cedric Hutchings <cedhut02@gmail.com>"]
edition = "2018"

[features]
donutvision = []
showcollision = []

[dependencies]
macroquad = { git = "https://github.com/not-fl3/macroquad.git" }
megaui-macroquad = { git="https://github.com/not-fl3/megaui-macroquad" }
rand = "0.7.3"
